Change to a license that is compatible with Clojure